# esl_drone_controller

./: Cargo.toml  README.md  output.txt
dronecode/: Cargo.toml
dronecode/src/: control.rs  main.rs
dronecode/src/control/: datalog.rs  drone.rs  info.rs  pid.rs  utils.rs  yaw_pitch_roll.rs
dronecode/src/control/fsm/: basic_modes.rs  calibration.rs  full_control.rs  height.rs  manual.rs  mod.rs  raw.rs  yaw_control.rs
dronecode/src/filters/: butterworth.rs  kalman.rs  mod.rs
lib/: Cargo.toml
lib/src/: lib.rs
runner/: Cargo.toml
runner/src/: demo.py  gui.rs  interface.rs  joystick.rs  keybinds.rs  main.rs  threads.rs
