[package]
name = "template-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-quadrupel = "3"
micromath = "2"
integer-sqrt = "0.1.5"
cordic = "0.1.5"
fixed = { version = "1.26", features = ["serde"] }
lib = {path = "../lib", version = "0.1.0"}